--- a/package.json
+++ b/package.json
@@ -10,14 +10,29 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@prisma/client": "^4.9.0",
     "@types/node": "18.11.19",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "axios": "^1.3.2",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "framer-motion": "^9.0.1",
     "next": "13.1.6",
+    "phosphor-react": "^1.4.1",
+    "puppeteer": "^19.6.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^6.5.1",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "prisma": "^4.9.0",
+    "tailwind-clip-path": "^1.0.0",
+    "tailwind-scrollbar": "^2.1.0",
+    "tailwindcss": "^3.2.4"
   }
 }
