--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@next/font": "13.1.6",
     "@prisma/client": "^4.9.0",
+    "@types/formidable": "^2.0.5",
     "@types/node": "18.11.19",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "axios": "^1.3.2",
+    "csv-parser": "^3.0.0",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "formidable": "^2.1.1",
     "framer-motion": "^9.0.1",
     "next": "13.1.6",
     "phosphor-react": "^1.4.1",
