--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "axios": "^1.3.2",
+    "chart.js": "^4.2.1",
     "csv-parser": "^3.0.0",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
@@ -25,6 +26,7 @@
     "phosphor-react": "^1.4.1",
     "puppeteer": "^19.6.3",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
     "typescript": "4.9.5"
